# talkytexty

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  research.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.specify/memory/: constitution.md
PLANS/: feature-roadmap.md  recording-visualization.md  superwhisper-ui-redesign.md  transcription-history.md  typing-parrot-animation.md  vibrant-viz-mic-hotkey-escape.md  visual-pill-updates.md
features/filler-word-removal/: plan.md
specs/001-voice-input/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-voice-input/checklists/: requirements.md
specs/001-voice-input/contracts/: tauri-commands.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkeys.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  resample.rs
src-tauri/src/commands/: audio_commands.rs  history_commands.rs  injection_commands.rs  mod.rs  model_commands.rs  preferences_commands.rs  system_commands.rs  window_commands.rs
src-tauri/src/history/: mod.rs
src-tauri/src/injection/: clipboard.rs  keyboard.rs  mod.rs  windows.rs
src-tauri/src/preferences/: mod.rs  storage.rs
src-tauri/src/transcription/: engine.rs  mod.rs  models.rs  postprocess.rs
src-tauri/tests/contract/: main.rs  test_audio_commands.rs  test_injection_commands.rs  test_injection_windows.rs  test_model_commands.rs
src-tauri/tests/integration/: main.rs  test_hotkey_rebind.rs  test_model_lifecycle.rs  test_recording_flow.rs
src-tauri/tests/unit/: main.rs  test_audio_capture.rs  test_engine.rs  test_hotkey_validation.rs  test_keyboard.rs  test_model_download.rs  test_push_to_talk.rs  test_resample.rs  test_windows.rs
src/components/: company-badge.tsx  hotkey-recorder.test.tsx  hotkey-recorder.tsx  model-card.test.tsx  model-card.tsx  permission-banner.tsx  recording-pill.test.tsx  recording-pill.tsx  settings-group.tsx  sidebar.tsx  soundwave.test.tsx  status-bar.tsx  toggle-switch.tsx
src/components/panels/: about-panel.tsx  changelog-panel.tsx  general-panel.tsx  history-panel.tsx  hotkeys-panel.tsx  macros-panel.tsx  models-panel.tsx
src/components/processing-animations/: frozen-frame.tsx  index.ts  pulse.tsx  typing-parrot.tsx
src/components/visualizations/: bars.tsx  index.ts  rainbow.tsx  sine.tsx
src/hooks/: use-audio-stream.ts  use-history.ts  use-models.ts  use-preferences.ts  use-preferences.tsx  use-recording.ts
src/pages/: overlay.tsx  picker.tsx  review.tsx
src/types/: index.ts
src/utils/: format-hotkey.test.ts  format-hotkey.ts
