[package]
name = "text-to-code"
version = "0.2.1"
description = "Voice-to-text desktop app for transcribing speech into any application"
authors = ["you"]
license = "MIT"
edition = "2021"

[lib]
name = "text_to_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"

# Speech-to-text
parakeet-rs = { version = "0.3", features = ["cpu"] }
whisper-rs = "0.15"  # CPU by default; enable GPU via --features cuda or --features metal

# Audio capture and processing
cpal = "0.17"
rubato = "0.15"
hound = "3"

# Model downloading
hf-hub = "0.4"

# Text injection
enigo = { version = "0.6", features = ["serde"] }
arboard = "3"

# Window management
x-win = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
tauri-plugin-single-instance = "2.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSButton", "NSControl", "NSWindow", "NSResponder", "NSView"] }

# Optional GPU acceleration features
# Build with: cargo build --features cuda (Linux/Windows) or --features metal (macOS)
[features]
default = []
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal", "whisper-rs/coreml"]

[dev-dependencies]
tempfile = "3"
